Downgraded to J1.8 compatibility
Removed all module references (it just works with classpath), all J9 constructs and libraries and removed all uses of ServiceLoader.Proveder class (new in J9).