@@ -15,6 +15,8 @@
  */
 package org.update4j;
 
+// Added by HP, for J1.8 downgrade compatibility
+import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -83,7 +85,8 @@ public class Bootstrap {
 	 */
 	public static void main(String[] args) throws Throwable {
 		String classname = null;
-		List<String> argsList = List.of(args);
+		// Removed/Modded by HP, for J1.8 downgrade compatibility
+                List<String> argsList = Arrays.asList(args);
 
 		if (args.length > 0) {
 
@@ -292,7 +295,8 @@ public class Bootstrap {
 	 *             Any throwable thrown in the bootstrap.
 	 */
 	public static void start(Delegate delegate, List<String> args) throws Throwable {
-		args = args == null ? List.of() : args;
+            // Removed/Modded by HP, for J1.8 downgrade compatibility	
+            args = args == null ? Arrays.asList(): args;
 		delegate.main(args);
 	}
 }
