@@ -31,6 +31,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+// Added by HP, for J1.8 downgrade compatibility
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
@@ -174,7 +176,8 @@ public class SingleInstanceManager {
 	public static void execute(List<String> args, Consumer<? super List<String>> onNewInstance, Path lockFileDir) {
 
 		if (args == null) {
-			args = List.of();
+                        // Removed/Modded by HP, for J1.8 downgrade compatibility
+			args = Arrays.asList();
 		}
 
 		if (lockFileDir == null) {
